# hpt_omni

./: .gitignore  README.md  eval.sh  hpt20_projects  infer.sh  pyproject.toml
data_prepare/coyo/: coyo_splitter.py
data_prepare/mmc4/: mmc4_filter_and_counter.py  mmc4_merger.py
data_prepare/sft/: preprocess_flan.py  preprocess_m3it.py
llava/: conversation.py  mm_utils.py
llava/data/: dataset.py  datasets_mixture.py
llava/eval/: demo.py  run_vila.py  run_vila_mi.py
llava/model/: __init__.py  builder.py  configuration_llava.py
llava/model/language_model/: llava_phi3.py
llava/model/multimodal_encoder/: siglip_encoder.py
llava/model/multimodal_projector/: base_projector.py
llava/train/: args.py  llava_trainer.py  train.py  utils.py
scripts/train/: run.sh
scripts/train/3b/: 2_pretrain_1.sh  3_sft.sh
scripts/train/8b/: 1_mm_align.sh
scripts/train/hpt_llama3_8b/: 1_align.sh  1_mm_align.sh  2_pretrain.sh  3_sft.sh  3_sft_hpto_v0.sh
scripts/train/hpt_phi3/: 1_align.sh  2_sft.sh  2_sft_0.sh  2_sft_1.sh  2_sft_debug.sh
scripts/train/hpto1.0_llama3_8b_internvit_6b_12/: 1_mm_align.sh  2_pretrain.sh  3_sft_text_06m.sh
scripts/train/vila_3b/: 1_mm_align.sh  2_pretrain.sh  2_pretrain_0.sh  2_pretrain_1.sh  2_pretrain_2.sh  3_sft.sh
scripts/v1_5/eval/: eval_test.sh
scripts/v1_5/release/3b/: 1_mm_align.sh  2_pretrain_0.sh
scripts/v1_5/release/8b/: 3_sft.sh
scripts/v1_5/release/hpt/: 1_mm_align.sh  3_sft.sh
scripts/v1_5/release/hpt_phi3/: 1_align.sh
tests/datasets/: test_llama3_template.py  test_mmc4.py  test_supervised_dataset.py
vila.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
