[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpt_omni"
version = "1.0.0"
description = "HPT Foundation Model"
readme = "README.md"
authors = [
    { name = "Yucheng Zhao", email = "yuchengzhao@hypergai.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]
eval = ["mmengine", "word2number", "Levenshtein", "nltk", "pywsd"]

[project.urls]
"Homepage" = "https://github.com/HyperGAI/HPT"
"Bug Tracker" = "https://github.com/HyperGAI/HPT/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
